--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,3 +6,11 @@
 html {
   font-size: 62.5%;
 }
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.6rem;
+  background-color: #0077b6;
+}
