--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,6 +11,17 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: "Inter", sans-serif;
   font-size: 1.6rem;
   background-color: #0077b6;
+}
+.verification-container {
+  background-color: #fff;
+  padding: 2rem;
+  border-radius: 1rem;
+  color: #444;
+  box-shadow: 0 0 32px rgba(0, 0, 0, 0.22);
+}
+.heading-secondary {
+  font-size: 2.4rem;
 }
