--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,12 +16,51 @@ body {
   background-color: #0077b6;
 }
 .verification-container {
-  background-color: #fff;
-  padding: 2rem;
-  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding: 4rem;
   color: #444;
+  background-color: #fff;
+  border-radius: 1rem;
   box-shadow: 0 0 32px rgba(0, 0, 0, 0.22);
 }
 .heading-secondary {
-  font-size: 2.4rem;
+  text-align: center;
+  font-size: 3.5rem;
+}
+.input-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.2rem;
+}
+input {
+  width: 5rem;
+  height: 5rem;
+  text-align: center;
+  font-size: 2rem;
+}
+input:focus {
+  outline: none;
+  border-color: #0077b6;
+}
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+button {
+  display: inline-block;
+  padding: 1rem 2rem;
+  border: none;
+  background-color: #0077b6;
+  color: #fff;
+  font-size: 1.6rem;
+  border-radius: 1rem;
+  outline: none;
+  cursor: pointer;
+}
+button:hover {
+  background-color: #3ca1d8;
 }
